--- a/echarts_pro/index.html
+++ b/echarts_pro/index.html
@@ -30,18 +30,22 @@
 
     <section class="mianbox">
         <div class="cloumn">
-            <div class="panel">
-                <h2>柱状图-就业行业 </h2>
+            <div class="panel bar">
+                <h2>
+                    柱状图-就业行业
+                    <a href="javascript:;">2019</a>
+                    <a href="javacript:;"> 2020</a>
+                </h2>
                 <div class="chart"></div>
                 <div class="panel-footer"></div>
             </div>
             <div class="panel">
-                <h2>柱状图-就业行业 </h2>
+                <h2>折线图-人员变化</h2>
                 <div class="chart"></div>
                 <div class="panel-footer"></div>
             </div>
             <div class="panel">
-                <h2>柱状图-就业行业 </h2>
+                <h2>饼形图-年龄分布</h2>
                 <div class="chart"></div>
                 <div class="panel-footer"></div>
             </div>
@@ -71,18 +75,18 @@
         </div>
 
         <div class="cloumn">
-            <div class="panel">
-                <h2>柱状图-就业行业 </h2>
+            <div class="panel bar2">
+                <h2>柱状图-技能掌握</h2>
                 <div class="chart"></div>
                 <div class="panel-footer"></div>
             </div>
             <div class="panel">
-                <h2>柱状图-就业行业 </h2>
+                <h2>折线图-播放量</h2>
                 <div class="chart"></div>
                 <div class="panel-footer"></div>
             </div>
             <div class="panel">
-                <h2>柱状图-就业行业 </h2>
+                <h2>饼形图-地区分布</h2>
                 <div class="chart"></div>
                 <div class="panel-footer"></div>
             </div>
@@ -90,6 +94,9 @@
     </section>
 
     <script src="./js/flexible.js"></script>
+    <script src="./js/echarts.min.js"></script>
+    <script src="./js/jquery.js"></script>
+    <script src="./js/index.js"></script>
 </body>
 
 </html>
