--- a/echarts_pro/index.html
+++ b/echarts_pro/index.html
@@ -39,12 +39,12 @@
                 <div class="chart"></div>
                 <div class="panel-footer"></div>
             </div>
-            <div class="panel">
+            <div class="panel line">
                 <h2>折线图-人员变化</h2>
                 <div class="chart"></div>
                 <div class="panel-footer"></div>
             </div>
-            <div class="panel">
+            <div class="panel pie">
                 <h2>饼形图-年龄分布</h2>
                 <div class="chart"></div>
                 <div class="panel-footer"></div>
@@ -80,12 +80,12 @@
                 <div class="chart"></div>
                 <div class="panel-footer"></div>
             </div>
-            <div class="panel">
+            <div class="panel line2">
                 <h2>折线图-播放量</h2>
                 <div class="chart"></div>
                 <div class="panel-footer"></div>
             </div>
-            <div class="panel">
+            <div class="panel pie1">
                 <h2>饼形图-地区分布</h2>
                 <div class="chart"></div>
                 <div class="panel-footer"></div>
