--- a/echarts_pro/index.html
+++ b/echarts_pro/index.html
@@ -97,6 +97,8 @@
     <script src="./js/echarts.min.js"></script>
     <script src="./js/jquery.js"></script>
     <script src="./js/index.js"></script>
+    <script src="./js/china.js"></script>
+    <script src="./js/myMap.js"></script>
 </body>
 
 </html>
